# nlp-utils

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: main.rs
src/language_convertor/: mod.rs
src/language_detector/: mod.rs
src/sentiment/: mod.rs
src/translation/: mod.rs
