[package]
name = "nlp-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lingua = "1.4.0"
rust-bert = "0.20.0"
serde = "1.0.160"


[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
